# duckdb-delta-sharing

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  extension_config.cmake  mac_odbc_fixes.patch  patch_fetch_buffer.py  patch_fetch_offset.py  patch_thread_safety.py  patch_widechar.py  test_concurrency.py  test_crash.sql  test_deadlock.py  test_deadlock.sql  test_deadlock2.sql  test_delta.py  test_macro.sql  test_pragma.sql  test_secret.sql  test_tx.sql  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: BundledBinaryPipeline.yml  DeployWasmDemo.yml  MainDistributionPipeline.yml
demo/: check_version.cjs  index.html  package.json  pnpm-lock.yaml
demo/public/: duckdb_delta_sharing.wasm
demo/src/: duckdb.ts  main.ts  style.css
go_test/: deadlock_test  deadlock_test.cpp  deadlock_test2  deadlock_test2.cpp  go.mod  main.go
skills/query-delta-share/: SKILL.md
skills/visualize-sql/: SKILL.md
src/: delta_share_multi_file_reader.cpp  delta_sharing_client.cpp  delta_sharing_json.cpp  duck_delta_share_extension.cpp  duck_delta_share_functions.cpp  duckdb_delta_sharing_extension.cpp  duckdb_delta_sharing_functions.cpp
src/include/: delta_share_multi_file_reader.hpp  delta_sharing_client.hpp  delta_sharing_json.hpp  duck_delta_share_extension.hpp  duck_delta_share_functions.hpp  duckdb_delta_sharing_extension.hpp  duckdb_delta_sharing_functions.hpp  z85.hpp
test/integration/: run_e2e_bundled_tests.sh  run_e2e_tests.sh
test/sql/: duck_delta_share.test  duckdb_delta_sharing.test
unixODBC-2.3.12/: Makefile  config.h  config.status  configure  libtool  unixodbc_conf.h
unixODBC-2.3.12/DRVConfig/: Makefile
unixODBC-2.3.12/DRVConfig/Mimer/: Makefile
unixODBC-2.3.12/DRVConfig/MiniSQL/: Makefile
unixODBC-2.3.12/DRVConfig/MySQL/: Makefile
unixODBC-2.3.12/DRVConfig/Oracle/: Makefile
unixODBC-2.3.12/DRVConfig/PostgreSQL/: Makefile
unixODBC-2.3.12/DRVConfig/drvcfg1/: Makefile
unixODBC-2.3.12/DRVConfig/drvcfg2/: Makefile
unixODBC-2.3.12/DRVConfig/esoob/: Makefile
unixODBC-2.3.12/DRVConfig/nn/: Makefile
unixODBC-2.3.12/DRVConfig/oplodbc/: Makefile
unixODBC-2.3.12/DRVConfig/sapdb/: Makefile
unixODBC-2.3.12/DRVConfig/tds/: Makefile
unixODBC-2.3.12/DRVConfig/template/: Makefile
unixODBC-2.3.12/DRVConfig/txt/: Makefile
unixODBC-2.3.12/DriverManager/: Makefile  libodbc.la  odbc.pc
unixODBC-2.3.12/DriverManager/.deps/: SQLAllocConnect.Plo  SQLAllocEnv.Plo  SQLAllocHandle.Plo  SQLAllocHandleStd.Plo  SQLAllocStmt.Plo  SQLBindCol.Plo  SQLBindParam.Plo  SQLBindParameter.Plo  SQLBrowseConnect.Plo  SQLBrowseConnectW.Plo  SQLBulkOperations.Plo  SQLCancel.Plo  SQLCancelHandle.Plo  SQLCloseCursor.Plo  SQLColAttribute.Plo  SQLColAttributeW.Plo  (+106 more)
unixODBC-2.3.12/Drivers/: Makefile
unixODBC-2.3.12/cur/: Makefile  libodbccr.la  odbccr.pc
unixODBC-2.3.12/doc/: Makefile
unixODBC-2.3.12/exe/: Makefile  dltest  isql  iusql  odbc_config  odbcinst  slencheck
unixODBC-2.3.12/extras/: Makefile  libodbcextraslc.la
unixODBC-2.3.12/include/: Makefile
unixODBC-2.3.12/ini/: Makefile  libinilc.la
unixODBC-2.3.12/libltdl/: Makefile  config.status  libltdlc.la  libtool  lt__argz.lo
unixODBC-2.3.12/log/: Makefile  libloglc.la
unixODBC-2.3.12/lst/: Makefile  liblstlc.la
unixODBC-2.3.12/man/: Makefile
unixODBC-2.3.12/odbcinst/: Makefile  libodbcinst.la  libodbcinstlc.la  odbcinst.pc
unixODBC-2.3.12/samples/: Makefile
(+213 files in other folders)
